--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "autoprefixer": "^10.4.20",
     "gatsby": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
@@ -25,6 +26,7 @@
     "gatsby-source-contentful": "^8.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "graphql": "^16.9.0",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
